# despatico_chat

./: CMakeLists.txt  README.md  build.sh
Resources/bundles/: ChatBundle.txt
Resources/panels/: ChatArea.txt
src/: main.c  main2.c
src/local/: chat_types.h  client.c  client.h  commands.c  commands.h  helper.c  helper.h  management.c  management.h  server.c  server.h
tests/: command_tests.c
